Added new statuses for users. Some endpoints return 403 now, if user is not admin. Update openapi documentation
